<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="16sp"
    android:layout_marginStart="16sp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ImageView
        android:layout_marginTop="25sp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="100sp"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textAlignment="center"/>

    <TextView
        android:layout_marginTop="16sp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        android:text="Faça o login:"/>

    <android.support.v7.widget.CardView
        android:layout_marginTop="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10sp"
        app:cardBackgroundColor="@color/colorAccentLight">

        <EditText
            android:id="@+id/edit_email"
            android:layout_marginStart="6sp"
            android:layout_marginEnd="6sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="Email"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_marginTop="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10sp"
        app:cardBackgroundColor="@color/colorAccentLight">

        <EditText
            android:id="@+id/edit_senha"
            android:layout_marginStart="6sp"
            android:layout_marginEnd="6sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="Senha"/>

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/login_button"
        android:layout_marginTop="6sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ButtonTheme"
        android:textAllCaps="false"
        android:text="@string/login"/>

    <TextView
        android:id="@+id/forgotPassword"
        android:background="?attr/selectableItemBackground"
        android:layout_marginTop="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:textSize="14sp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/forgot_password"/>

    <TextView
        android:layout_marginTop="8sp"
        android:layout_marginBottom="8sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        android:text="@string/no_account"/>

    <Button
        android:id="@+id/signup_button"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:textColor="@color/black"
        style="@style/ButtonTheme"
        android:text="@string/signup" />

</LinearLayout>
